@@ -10,6 +10,11 @@
 
 RELEASE 0.04 - 
 
+  From Charles Crain:
+
+  - Significant performance improvements in the Node.FS and
+    Scanner subsystems.
+
   From Steven Knight:
 
   - Fix using a directory as a Default(), and allow Default() to
